--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Prata&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Cormorant+Unicase:wght@300;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet"href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
 
 </head>
 <body>
@@ -41,8 +42,20 @@
         Our social: <a href=""><a href=""><i class="fa-brands fa-facebook-f"></i></a> <a href=""><i class="fa-brands fa-instagram"></i></a> <a href=""><i class="fa-brands fa-blogger-b"></i></a>
       </div>
     </div>
+
+    <div class="header-side_areamenu">
+      <div>
+      <br>
+      <a class="active_m" href="">Home</a> <br><br>
+      <a href="">About</a> <br><br>
+      <a href="">Pages</a> <br><br>
+      <a href="">Shop</a> <br><br>
+      <a href="">Articles</a> <br><br>
+      <a href="">Contact</a> <br><br>
+      </div>
+    </div>
     <section>
-      <div class="topmenu container">
+      <div class="topmenu container animate__animated animate__fadeIn">
         <div class="social-left">
           <a href=""><i class="fa-brands fa-facebook-f"></i></a>
           <a href=""><i class="fa-brands fa-instagram"></i></a>
@@ -61,7 +74,7 @@
       </div>
     </section>
 
-    <div class="header container">
+    <div class="header container animate__animated animate__fadeInDown">
       <div class="logo-left"><a href="">BOOK<span>SAW</span></a></div>
       <div class="menu-right">
         <a class="active_m" href="">Home</a>
@@ -72,6 +85,13 @@
         <a href="">Contact</a>
 
         <span class="heder-line">
+          <snap class="heder-line_one"></snap>
+          <snap class="heder-line_two"></snap>
+          <snap class="heder-line_three"></snap>
+          <snap class="heder-line_foure"></snap>
+        </span>
+
+        <span class="heder-lineadaptive">
           <snap class="heder-line_one"></snap>
           <snap class="heder-line_two"></snap>
           <snap class="heder-line_three"></snap>
@@ -94,57 +114,57 @@
       </form>
     </div>
   </header>
-  <div class="slider swiper">
+  <div class="slider swiper animate__animated animate__fadeIn animate__delay-1s">
     <div class="swiper-wrapper">
       <div class="swiper-slide">
         <div class="slider_block">  <!-- Slide one -->
-          <div class="slider-arrow_left"><img src="../img/arrow-left.svg" alt=""></i></div>
+          <div class="slider-arrow_left"><img src="./img/arrow-left.svg" alt=""></i></div>
           <div class="slider_left">
             <h1>Life Of The Wild</h1>
             <p class="userNameId">We see Jesus, we believe in Jesus and we wait for Jesus, yet still we suffer. This book offers real and rugged answers in life’s dark places. Discover how to live with hope in a fallen, messed- up, "wild" world, and be encouraged.</p>
-            <button class="button" type="button" name="button">Read more <img src="../img/arrow-read.svg" alt=""></button>
+            <button class="button" type="button" name="button">Read more <img src="./img/arrow-read.svg" alt=""></button>
             <div class="swiper-pagination1"></div>
           </div>
           <div class="slider_right">
             <div class="bookimg b-slide_one"><div class="book-line"></div></div>
-            <div class="bgpattern"><img src="../img/bgpattern.png" alt=""></div>
+            <div class="bgpattern"><img src="./img/bgpattern.png" alt=""></div>
           </div>
-          <div class="slider-arrow_right"><img src="../img/arrow-right.svg" alt=""></div>
+          <div class="slider-arrow_right"><img src="./img/arrow-right.svg" alt=""></div>
         </div>
       </div>
 
       <div class="swiper-slide">  <!-- Slide two -->
         <div class="slider_block">
-          <div class="slider-arrow_left"><img src="../img/arrow-left.svg" alt=""></i></div>
+          <div class="slider-arrow_left"><img src="./img/arrow-left.svg" alt=""></i></div>
           <div class="slider_left">
             <h1>Villette</h1>
-            <p class="userNameId">Lucy Snowe, sin familia, sin dinero, sin posición, entra a trabajar en un internado en una ciudad extranjera, Villette. Sus únicas compañeras son las personificaciones que adopta su interior: la Memoria...</p>
-            <button class="button" type="button" name="button">Read more <img src="../img/arrow-read.svg" alt=""></button>
+            <p class="userNameId">Lucy Snowe, sin familia, sin dinero, sin posición, entra a trabajar en un internado en una ciudad extranjera, Villette. Sus únicas compañeras son las personificaciones que adopta su interior: la Memoria..</p>
+            <button class="button" type="button" name="button">Read more <img src="./img/arrow-read.svg" alt=""></button>
             <div class="swiper-pagination1"></div>
           </div>
           <div class="slider_right">
             <div class="bookimg b-slide_two"><div class="book-line"></div></div>
-            <div class="bgpattern"><img src="../img/bgpattern.png" alt=""></div>
+            <div class="bgpattern"><img src="./img/bgpattern.png" alt=""></div>
           </div>
-          <div class="slider-arrow_right"><img src="../img/arrow-right.svg" alt=""></div>
+          <div class="slider-arrow_right"><img src="./img/arrow-right.svg" alt=""></div>
         </div>
       </div>
 
       <div class="swiper-slide">  <!-- Slider three -->
         <div class="slider_block">
-          <div class="slider-arrow_left"><img src="../img/arrow-left.svg" alt=""></i></div>
+          <div class="slider-arrow_left"><img src="./img/arrow-left.svg" alt=""></i></div>
           <div class="slider_left">
             <h1>After</h1>
             <p class="userNameId">After is a novel by Anna Todd, published in 2014. Originally published on the Wattpad platform. Todd, inspired by the novel "50 Shades of Grey", wrote the love story of two young people: a guy and a girl who are so different that their relationship is unimaginable.</p>
-            <button class="button" type="button" name="button">Read more <img src="../img/arrow-read.svg" alt=""></button>
+            <button class="button" type="button" name="button">Read more <img src="./img/arrow-read.svg" alt=""></button>
             <div class="swiper-pagination1"></div>
           </div>
           <div class="slider_right">
             <div class="bookimg b-slide_three"><div class="book-line"></div></div>
-            <div class="bgpattern"><img src="../img/bgpattern.png" alt=""></div>
+            <div class="bgpattern"><img src="./img/bgpattern.png" alt=""></div>
 
           </div>
-          <div class="slider-arrow_right"><img src="../img/arrow-right.svg" alt=""></div>
+          <div class="slider-arrow_right"><img src="./img/arrow-right.svg" alt=""></div>
         </div>
       </div>
     </div>
@@ -152,11 +172,11 @@
 
   <div class="associated">
     <div class="container">
-      <img src="../img/stydetbook.png" alt="">
-      <img src="../img/bookstore.png" alt="">
-      <img src="../img/bookdoor.png" alt="">
-      <img src="../img/library.png" alt="">
-      <img src="../img/flaprise.png" alt="">
+      <img src="./img/stydetbook.png" alt="">
+      <img src="./img/bookstore.png" alt="">
+      <img src="./img/bookdoor.png" alt="">
+      <img src="./img/library.png" alt="">
+      <img src="./img/flaprise.png" alt="">
     </div>
   </div>
 
@@ -238,7 +258,7 @@
       </div>
     </div>
     <div class="swiper-pagination"></div>
-    <div class="viewproducts"><a href="">View all products <img src="../img/arrow-right.svg" alt=""></a></div>
+    <div class="viewproducts"><a href="">View all products <img src="./img/arrow-right.svg" alt=""></a></div>
   </div>
 
 
@@ -247,12 +267,12 @@
       <div class="best-book_img"></div>
       <div class="best-book_info">
         <h2>Best selling book</h2>
-        <img src="../img/bestbookborder.png" alt="">
+        <img src="./img/bestbookborder.png" alt="">
         <div class="bestbook-author">By Timbur Hood</div>
         <div class="bestbook-name">Birds gonna be happy</div>
         <div class="bestbook-p">Tuff Gong Books proudly presents Bob's personal vision in a richly illustrated Jamaican picture book with full page spreads in luscious color. The whimsical mixed media art and lyrical text will delight babies, toddlers, and older readers as well.</div>
         <div class="bestbook-price">$ 45.00</div>
-        <a href="">Shop it now <img src="../img/arrow-right.svg" alt=""></a></a>
+        <a href="">Shop it now <img src="./img/arrow-right.svg" alt=""></a></a>
       </div>
     </div>
   </div>
@@ -683,7 +703,7 @@
 
     <div class="quote">
       <h3>Quote of the day</h3>
-      <img src="../img/bestbookborder.png" alt="">
+      <img src="./img/bestbookborder.png" alt="">
       <p>“The more that you read, the more things you will know. The more that you learn, the more places you’ll go.”</p>
       <span>Dr. Seuss</span>
     </div>
@@ -768,14 +788,14 @@
       </div>
     </div>
     <div class="swiper-pagination2"></div>
-    <div class="viewproducts1"><a href="">View all products <img src="../img/arrow-right.svg" alt=""></a></div>
+    <div class="viewproducts1"><a href="">View all products <img src="./img/arrow-right.svg" alt=""></a></div>
   </div>
 
   <div class="subscribe">
     <div class="sub-content">
       <div class="sub_title">
         <h2>Subscribe to our newsletter</h2>
-        <img src="../img/bestbookborder.png" alt="">
+        <img src="./img/bestbookborder.png" alt="">
       </div>
 
       <div class="sub_info">
@@ -837,23 +857,23 @@
 
     </div>
 
-    <div class="article_button">read all articles <img src="../img/arrow-read.svg" alt=""></div>
+    <div class="article_button">read all articles <img src="./img/arrow-read.svg" alt=""></div>
   </div>
 
 
   <div class="downloadapp">
     <div class="app-block">
       <div class="app_img">
-        <img src="../img/PhoneApp1.png" alt="">
+        <img src="./img/PhoneApp1.png" alt="">
       </div>
 
       <div class="app_info">
         <h3>Download our app now !</h3>
-        <img src="../img/bestbookborder.png" alt="">
+        <img src="./img/bestbookborder.png" alt="">
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sagittis sed ptibus liberolectus nonet psryroin. Amet sed lorem posuere sit iaculis amet, ac urna. Adipiscing fames semper erat ac in suspendisse iaculis.</p>
         <div class="download__button">
-          <img src="../img/Google_EN.svg" alt="">
-          <img src="../img/AppleStore.svg" alt="">
+          <img src="./img/Google_EN.svg" alt="">
+          <img src="./img/AppleStore.svg" alt="">
         </div>
       </div>
     </div>
@@ -925,6 +945,6 @@
 <script src="https://code.jquery.com/jquery-2.2.0.min.js" type="text/javascript"></script>
 <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-<script src="../js/slider.js"></script>
-<script src="../js/script.js"></script>
+<script src="./js/slider.js"></script>
+<script src="./js/script.js"></script>
 </html>
